feat: comment, post swagger 작성 완료 및 오류 수정
