# SNS_SERVER/services/post.service.go
@@ -1,6 +1,8 @@
 package services
 
 import (
+	"context"
+
 	"github.com/dik654/Go_projects/SNS_SERVER/controllers/dto"
 	"github.com/dik654/Go_projects/SNS_SERVER/models"
 )
@@ -9,9 +11,9 @@ type PostService interface {
 	CreatePost(*dto.CreatePostRequest, *dto.SessionInfo) error
 	GetAllPosts(*dto.PaginationRequest) ([]models.Post, error)
 	GetPosts(*dto.GetPostRequest) ([]models.Post, error)
-	UpdatePost(models.Post) error
+	UpdatePost(string, *dto.CreatePostRequest) error
 	DeletePost(string) error
 	LikePost(*dto.PostLikeRequest) error
 	JudgePost(models.Judge) error
-	CanEditPost(*dto.SessionInfo, string) (bool, error)
+	CanEditPost(context.Context, *dto.SessionInfo, string) (bool, error)
 }
